# apollo

./: .buildinfo  .gitignore  LICENSE.txt  Makefile  README.md  apollo.data.html  apollo.dataset.html  apollo.html  apollo.models.html  apollo.utils.html  apollo.visualization.html  examples.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yaml  documentation.yaml
_modules/: index.html
_modules/apollo/data/: configs.html  detectors.html  events.html  geometric.html  importers.html  noise.html  utils.html
_modules/apollo/utils/: random.html
_sources/: apollo.rst.txt  examples.rst.txt
apollo/data/: configs.py  dataset.py  detectors.py  events.py  geometric.py  importers.py  noise.py  utils.py
apollo/dataset/: datasets.py  generators.py
apollo/graph/: annotators.py  builders.py  generators.py
apollo/utils/: constants.py  detector_helpers.py  plotting.py  random.py
apollo/visualization/: events.py
data/processed/notebooks/: config.json  index.h5
data/processed/notebooks/data/: histogram_005a0f2b-1011-4347-8f1e-4e1d912c2ac8.npy  histogram_032829e1-3617-43a3-9e36-c80f38731b95.npy  histogram_13236634-b431-4378-a957-a231b873b6c4.npy  histogram_1370a29b-96cc-46da-a5fd-638b74d15788.npy  histogram_19294bf3-0487-4c3f-a19b-2988cd0dd90a.npy  histogram_2154ffcb-6a47-454c-b23f-b05abfd4be53.npy  histogram_22d2eaa0-da62-4aef-a078-8691997b58d1.npy  histogram_317481a0-2324-48c6-9d0a-169c8abaad85.npy  histogram_3cd9e75f-eec9-498a-a285-f6232d37d406.npy  histogram_3d982d4e-ba2d-47c5-bafc-00c28a463b83.npy  histogram_3e1e67d5-8580-41d0-87e3-c33602fb06d1.npy  histogram_4c9682db-ec28-4aac-b043-7400e7ca7652.npy  histogram_56fcbeaa-2ee3-45ec-8fd9-3c9e933e10fa.npy  histogram_686de7e3-1255-44b4-a9e3-1923cd340931.npy  histogram_6fb90b54-cbfc-47c6-9488-0845c16df4fe.npy  histogram_83aed1fc-591e-4fe8-8410-e8607416bcaf.npy  histogram_900d5f38-15d0-41c6-8b98-3e6f40291f9e.npy  histogram_ad62a8ea-c492-4030-9151-af4f4c6b3021.npy  histogram_b7820fc8-7d74-4f9d-b282-4f6885fdf999.npy  histogram_c009b729-bf6c-44c8-9ebe-2f89916bf31f.npy  histogram_e1ccf6fa-14eb-47ed-8739-4c768c9945ac.npy  histogram_e2bbdc0b-fd58-4ba2-81ce-0dede2b125de.npy  histogram_e39418f4-e85e-4541-810a-d3dfb917a2e5.npy  histogram_f1301609-d095-43d2-86ef-1c3eddbd3bbf.npy  histogram_fd8521e0-ef45-4ce2-9369-eb35722c3f04.npy
docs/: Makefile  apollo.data.rst  apollo.dataset.rst  apollo.rst  apollo.utils.rst  apollo.visualization.rst  conf.py  index.rst  intro.rst
docs/source/: apollo.graph.rst  apollo.models.rst  apollo.rst  apollo.utils.rst  conf.py
examples/: DataPipeline.ipynb  data_aggregation.py  dataset_from_events.py  graph_classification.py  histogram_generator.py  noise_generators.py
examples/data/all_single_line_events_0_10000000_50/: histogram.npy  labels.npy
examples/data/cascade_single_line_events_0_10000000_50/: histogram.npy  labels.npy
examples/data/starting_tracks_single_line_events_0_10000000_50/: histogram.npy
examples/data/tracks_single_line_events_0_10000000_50/: histogram.npy  labels.npy
notebooks/: 01-load-and-explore-events.ipynb  02-visualize-detector.ipynb  03-create-dataset.ipynb
tests/: test_apollo.py
