[tool.poetry]
name = "pone-apollo"
version = "0.1.0"
description = ""
authors = ["Janik Prottung <me@jprottung.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "apollo"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
awkward = "^1.10.2"
pandas = "^1.5.1"
pyarrow = "^10.0.0"
plotly = "^5.11.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.991"
black = {extras = ["jupyter"], version = "^22.10.0"}
pytest = "^7.2.0"
jupyter = "^1.0.0"
pytest-cov = "^4.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ['py38']
preview = true
force-exclude = '''
.*/setup\.py$
'''


[tool.mypy]
files = "apollo"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.pytest.ini_options]
# Personal preference: I am too used to native traceback
addopts = "-n auto"
testpaths = [
    "tests"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "nocov",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
# Activating branch coverage is super important
branch = true
omit = [
  # add your files to omit here
    ]


[tool.isort]
py_version = 38
profile = "black"
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["apollo", "tests"]
extend_skip = ["setup.py"]
known_third_party = ["poetry.core"]